unpackaged/main/default/objects/clcommon__Batch_Process_Log__c/clcommon__Batch_Process_Log__c.object-meta.xml
<CustomObject>
    <label>Batch Process Log</label>
    <nameField>
        <displayFormat>ABN-{00000000}</displayFormat>
        <label>Apex Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Process Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>