unpackaged/main/default/objects/clcommon__Batch_Process_Log__c/fields/clcommon__Archived__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>