unpackaged/main/default/objects/clcommon__Batch_Process_Log__c/fields/clcommon__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>