unpackaged/main/default/objects/clcommon__Batch_Process_Log__c/fields/clcommon__Message__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>