unpackaged/main/default/objects/clcommon__Batch_Process_Log__c/fields/clcommon__Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>